--- a/1.pytorch_basis/1. pytorch_basis.ipynb
+++ b/1.pytorch_basis/1. pytorch_basis.ipynb
@@ -5463,7 +5463,7 @@
     "width": "273.174px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
