实现AlexNet中的局部响应归一化

--- a/6.CNNs/2. LeNet5_and_AlexNet.ipynb
+++ b/6.CNNs/2. LeNet5_and_AlexNet.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T00:28:01.325222Z",
-     "start_time": "2020-10-15T00:28:01.299454Z"
+     "end_time": "2020-10-19T01:57:38.713247Z",
+     "start_time": "2020-10-19T01:57:38.698471Z"
     }
    },
    "outputs": [
@@ -28,8 +28,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T00:28:02.574370Z",
-     "start_time": "2020-10-15T00:28:02.571334Z"
+     "end_time": "2020-10-19T01:57:39.141187Z",
+     "start_time": "2020-10-19T01:57:39.138191Z"
     }
    },
    "outputs": [],
@@ -96,8 +96,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T00:28:08.140421Z",
-     "start_time": "2020-10-15T00:28:07.226488Z"
+     "end_time": "2020-10-19T01:57:45.310371Z",
+     "start_time": "2020-10-19T01:57:44.275029Z"
     }
    },
    "outputs": [],
@@ -118,8 +118,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T09:10:09.294384Z",
-     "start_time": "2020-10-14T09:10:09.288934Z"
+     "end_time": "2020-10-17T03:40:40.234649Z",
+     "start_time": "2020-10-17T03:40:40.221002Z"
     }
    },
    "outputs": [],
@@ -14262,22 +14262,23 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T03:47:06.598819Z",
-     "start_time": "2020-10-14T03:47:06.591267Z"
+     "end_time": "2020-10-19T01:58:50.083718Z",
+     "start_time": "2020-10-19T01:58:50.067002Z"
     }
    },
    "outputs": [],
    "source": [
-    "from collections import OrderedDict"
+    "from collections import OrderedDict\n",
+    "from torchsummary import summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T03:47:06.793553Z",
-     "start_time": "2020-10-14T03:47:06.785006Z"
+     "end_time": "2020-10-19T02:01:10.095466Z",
+     "start_time": "2020-10-19T02:01:10.082325Z"
     }
    },
    "outputs": [],
@@ -14320,6 +14321,260 @@
     "        y_pred = self.forward(x)\n",
     "        acc = (y_pred.argmax(dim=1) == y).sum().item() / len(y)\n",
     "        return acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-19T02:01:11.797940Z",
+     "start_time": "2020-10-19T02:01:11.297446Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 96, 55, 55]          11,712\n",
+      "              ReLU-2           [-1, 96, 55, 55]               0\n",
+      "         MaxPool2d-3           [-1, 96, 27, 27]               0\n",
+      "            Conv2d-4          [-1, 256, 27, 27]         614,656\n",
+      "              ReLU-5          [-1, 256, 27, 27]               0\n",
+      "         MaxPool2d-6          [-1, 256, 13, 13]               0\n",
+      "            Conv2d-7          [-1, 384, 13, 13]         885,120\n",
+      "              ReLU-8          [-1, 384, 13, 13]               0\n",
+      "            Conv2d-9          [-1, 384, 13, 13]       1,327,488\n",
+      "             ReLU-10          [-1, 384, 13, 13]               0\n",
+      "           Conv2d-11          [-1, 256, 13, 13]         884,992\n",
+      "             ReLU-12          [-1, 256, 13, 13]               0\n",
+      "        MaxPool2d-13            [-1, 256, 6, 6]               0\n",
+      "           Linear-14                 [-1, 4096]      37,752,832\n",
+      "             ReLU-15                 [-1, 4096]               0\n",
+      "          Dropout-16                 [-1, 4096]               0\n",
+      "           Linear-17                 [-1, 4096]      16,781,312\n",
+      "             ReLU-18                 [-1, 4096]               0\n",
+      "          Dropout-19                 [-1, 4096]               0\n",
+      "           Linear-20                   [-1, 10]          40,970\n",
+      "================================================================\n",
+      "Total params: 58,299,082\n",
+      "Trainable params: 58,299,082\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.19\n",
+      "Forward/backward pass size (MB): 11.04\n",
+      "Params size (MB): 222.39\n",
+      "Estimated Total Size (MB): 233.63\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = AlexNet()\n",
+    "model = model.cuda()\n",
+    "summary(model, input_size=(1, 224, 224))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 局部响应归一化"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "局部响应归一化可以分为`通道间的响应归一化(Inter-Channel LRN)`和`通道内的响应归一化(Intra-Channel LRN)`，其中AlexNet采用的是`通道间的响应归一化`\n",
+    "- $b^i_{x,y} = a^i_{x,y}(k + \\alpha \\displaystyle\\sum_{j=max(0,i-n/2)}^{min(N-1, i+n/2)}(a^j_{x,y})^2)^{-\\beta}$\n",
+    "- 其中$k, \\alpha, \\beta, n$都是超参数\n",
+    "- k是为了避免奇异点（分母为0），$\\alpha$是归一化常数，$\\beta$是对比度常数，n是定义域长度（即归一化考虑多少个连续的像素点）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-19T13:47:40.375812Z",
+     "start_time": "2020-10-19T13:47:40.359470Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 通道间的局部响应归一化\n",
+    "def inter_lrn(output, n, k=1.0, alpha=1e-4, beta=0.75):\n",
+    "    # 获取输出的形状\n",
+    "    c, h, w = output.shape\n",
+    "    # 生成一个shape和output一样的向量\n",
+    "    lrn_output = torch.zeros_like(output, dtype=torch.float32)\n",
+    "    for x in range(h):\n",
+    "        for y in range(w):\n",
+    "            for i in range(c):\n",
+    "                # 按照公式\n",
+    "                temp = (output[int(max(0,i-n/2)):int(min(c-1, i+n/2)+1), x, y]**2).sum()\n",
+    "                lrn_output[i, x, y] = output[i, x, y] / ((k + alpha * temp)**beta)\n",
+    "            \n",
+    "    return lrn_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-19T13:47:41.380018Z",
+     "start_time": "2020-10-19T13:47:41.342549Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.5000, 0.2500, 0.3000],\n",
+       "         [0.2000, 0.1667, 0.1500],\n",
+       "         [0.1207, 0.1000, 0.1000]],\n",
+       "\n",
+       "        [[0.1667, 0.2222, 0.0714],\n",
+       "         [0.0690, 0.1364, 0.0408],\n",
+       "         [0.0405, 0.0449, 0.0283]],\n",
+       "\n",
+       "        [[0.0952, 0.1111, 0.3333],\n",
+       "         [0.0789, 0.1176, 0.2143],\n",
+       "         [0.1379, 0.1034, 0.0976]],\n",
+       "\n",
+       "        [[0.2000, 0.4000, 0.2000],\n",
+       "         [0.1471, 0.2500, 0.1000],\n",
+       "         [0.1000, 0.1538, 0.1250]]])"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = torch.tensor([[[1, 2, 3], [4, 3, 6], [7, 8, 9]], \n",
+    "                       [[1, 2, 1], [2, 3, 2], [3, 4, 3]], \n",
+    "                       [[2, 1, 2], [3, 2, 3], [4, 3, 4]], \n",
+    "                       [[4, 2, 1], [5, 2, 1], [2, 2, 4]]])\n",
+    "inter_lrn(output, n=2., k=0., alpha=1., beta=1.)\n",
+    "# LRN(output, n=2., k=1., alpha=1e-4, beta=0.75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-19T13:50:06.616348Z",
+     "start_time": "2020-10-19T13:50:06.607006Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 通道内的局部响应归一化\n",
+    "def intra_lrn(output, n, k=1.0, alpha=1e-4, beta=0.75):\n",
+    "    # 获取输出的形状\n",
+    "    c, h, w = output.shape\n",
+    "    # 生成一个shape和output一样的向量\n",
+    "    lrn_output = torch.zeros_like(output, dtype=torch.float32)\n",
+    "    \n",
+    "    for i in range(c):\n",
+    "        # 对每个通道padding, 方便运算\n",
+    "        output_pad = torch.from_numpy(np.pad(output[i, :, :].view(output.shape[1:]), \n",
+    "                                             ((n//2, n//2), (n//2, n//2))))\n",
+    "        for x in range(lrn_output.shape[1]):\n",
+    "            for y in range(lrn_output.shape[2]):\n",
+    "                temp = (output_pad[x:x+n+1, y:y+n+1]**2).sum()\n",
+    "                lrn_output[i, x, y] = output[i, x, y] / ((k + alpha * temp)**beta)\n",
+    "    \n",
+    "    return lrn_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-19T13:50:10.300588Z",
+     "start_time": "2020-10-19T13:50:10.274080Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.0333, 0.0698, 0.0253, 0.0678, 0.0435],\n",
+       "         [0.0465, 0.0667, 0.0323, 0.0685, 0.0179],\n",
+       "         [0.0465, 0.0370, 0.0187, 0.0115, 0.0612],\n",
+       "         [0.0192, 0.0309, 0.0407, 0.0294, 0.0351],\n",
+       "         [0.0513, 0.0625, 0.0367, 0.0568, 0.0638]]])"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = torch.tensor([[[1, 3, 2, 4, 2], \n",
+    "                       [2, 4, 3, 5, 1], \n",
+    "                       [2, 3, 2, 1, 3],\n",
+    "                       [1, 3, 5, 3, 2],\n",
+    "                       [2, 5, 4, 5, 3]]])\n",
+    "intra_lrn(output, 2, k=0., alpha=1., beta=1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-19T13:53:34.101896Z",
+     "start_time": "2020-10-19T13:53:34.082396Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1.0000, 1.9997, 2.9991],\n",
+       "         [3.9976, 2.9987, 5.9901],\n",
+       "         [6.9832, 7.9785, 8.9610]],\n",
+       "\n",
+       "        [[1.0000, 1.9997, 1.0000],\n",
+       "         [1.9997, 2.9987, 1.9997],\n",
+       "         [2.9987, 3.9964, 2.9987]],\n",
+       "\n",
+       "        [[1.9997, 1.0000, 1.9997],\n",
+       "         [2.9987, 1.9997, 2.9987],\n",
+       "         [3.9964, 2.9987, 3.9964]],\n",
+       "\n",
+       "        [[3.9976, 1.9997, 1.0000],\n",
+       "         [4.9925, 1.9994, 0.9999],\n",
+       "         [1.9979, 1.9994, 3.9976]]])"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用pytorch自带实现\n",
+    "output = torch.tensor([[[1, 2, 3], [4, 3, 6], [7, 8, 9]], \n",
+    "                       [[1, 2, 1], [2, 3, 2], [3, 4, 3]], \n",
+    "                       [[2, 1, 2], [3, 2, 3], [4, 3, 4]], \n",
+    "                       [[4, 2, 1], [5, 2, 1], [2, 2, 4]]])\n",
+    "lrn = nn.LocalResponseNorm(2)\n",
+    "output_3d = lrn(output)\n",
+    "output_3d"
    ]
   },
   {
