实现ResNet和DenseNet, 修改其他网络的bug

--- a/6.CNNs/3. VGG_NIN_GoogleNet.ipynb
+++ b/6.CNNs/3. VGG_NIN_GoogleNet.ipynb
@@ -103,15 +103,21 @@
     "from torchsummary import summary\n",
     "\n",
     "def vgg_block(conv_num, in_channels, out_channels):\n",
+    "    \"\"\"define vgg block because VGG model has the same structure\"\"\"\n",
     "    layer = OrderedDict({})\n",
-    "    layer[\"conv1\"] = nn.Conv2d(in_channels, out_channels, kernel_size=3, padding=1, stride=1)\n",
-    "    \n",
-    "    for i in range(1, conv_num):\n",
-    "        layer[\"conv\" + str(i+1)] = nn.Conv2d(out_channels, out_channels, kernel_size=3, padding=1, stride=1)\n",
-    "        layer[\"relu\" + str(i+1)] = nn.ReLU()\n",
-    "        \n",
+    "    for num in range(conv_num):\n",
+    "        if num == 0:\n",
+    "            layer[\"conv1\"] = nn.Conv2d(in_channels, out_channels,\n",
+    "                                       kernel_size=3, padding=1)\n",
+    "#             layer[\"bn1\"] = nn.BatchNorm2d(out_channels)\n",
+    "            layer[\"relu1\"] = nn.ReLU()\n",
+    "        else:\n",
+    "            layer[\"conv\" + str(num + 1)] = nn.Conv2d(out_channels, out_channels,\n",
+    "                                                     kernel_size=3, padding=1)\n",
+    "#             layer[\"bn\" + str(num + 1)] = nn.BatchNorm2d(out_channels)\n",
+    "            layer[\"relu\" + str(num + 1)] = nn.ReLU()\n",
     "    layer[\"pool1\"] = nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "    \n",
+    "\n",
     "    return nn.Sequential(layer)"
    ]
   },
@@ -4686,15 +4692,15 @@
    "source": [
     "GoogleNet使用了5个block，每个block之间使用3x3(stride=2)的最大池化\n",
     "- 输入1x224x224\n",
-    "- 第一个block使用64x1x7x7的卷积核, stride=2, padding=3, 输出64x111x111, 紧接着用3x3, stride=2的最大池化，得到64x55x55的输出\n",
-    "- 第二个block使用64x64x1x1的卷积核，stride=1, 得到64x55x55的输出，使用192x64x3x3(stride=1, padding=1)的卷积，得到192x54x54的输出, 使用3x3(stride=2)的最大池化，得到192x27x27的输出\n",
+    "- 第一个block使用64x1x7x7的卷积核, stride=2, padding=3, 输出64x112x112, 紧接着用3x3, stride=2, padding=1的最大池化，得到64x56x56的输出\n",
+    "- 第二个block使用64x64x1x1的卷积核，stride=1, 得到64x56x56的输出，使用192x64x3x3(stride=1, padding=1)的卷积，得到192x56x56的输出, 使用3x3(stride=2, padding=1)的最大池化，得到192x28x28的输出\n",
     "- 第三个block串联使用两个完整的inception模块,\n",
     "    - 第一个inception模块的输出通道为64, 128, 32, 32(2:4:1:1), 拼接起来就是256。其中，第二，三条inception模块的输入通道到96/192=1/2，16/192=1/12，再接上第二层卷积\n",
     "    - 第二个inception模块的输出通道为128，192，96，64(4:6:3:2)，拼接起来就是480。其中，第二，三条inception模块的输入通道减少到128/256=1/2，32/256=1/8\n",
-    "    - 输出480x27x27，再接一个3x3(stride=2)的pooling，得到480x13x13\n",
+    "    - 输出480x28x28，再接一个3x3(stride=2, padding=1)的pooling，得到480x14x14\n",
     "- 第四个block串联了5个inception块，其输出通道为192+208+48+64=512(12:13:3:4), 160+224+64+64=512(5:7:2:2), 128+256+64+64=512(2:4:1:1)，112+288+64+64=528(7:18:4:4)，256+320+128+128(4:5:2:2)=832\n",
     "    - 第2条线路的通道数最多，第1线路次之，紧接着是第3，4条，其中第2，3条都会按比例减少通道数，但是这个比例各不相同\n",
-    "    - 得到832x13x13的输出，再接一个3x3(stride=2)的pooling，得到832x6x6\n",
+    "    - 得到832x14x14的输出，再接一个3x3(stride=2)的pooling，得到832x7x7\n",
     "- 第五个block有2个inception块，输出通道数为256+320+128+128=832, 384+384+128+128=1024，每条线路的通道数分配思路和第3，4模块的一致，只是在具体数值上有所不同\n",
     "- 第五个模块紧跟着输出层，使用全局平均池化，最后将2维数组接上一个输出个数维标签类别数的全连接层"
    ]
@@ -4733,7 +4739,7 @@
     "        self.block1 = nn.Sequential(\n",
     "            nn.Conv2d(in_channels=1, out_channels=64, kernel_size=7, stride=2, padding=3),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=3, stride=2),\n",
+    "            nn.MaxPool2d(kernel_size=3, stride=2, padding=1),\n",
     "#             LRN(4)\n",
     "#             nn.LocalResponseNorm(5)\n",
     "            # 使用BatchNorm2d来代替原来的局部响应归一化\n",
@@ -4748,12 +4754,12 @@
     "            nn.ReLU(),\n",
     "#             LRN(4),\n",
     "#             nn.LocalResponseNorm(5),\n",
-    "            nn.MaxPool2d(kernel_size=3, stride=2)\n",
+    "            nn.MaxPool2d(kernel_size=3, stride=2, padding=1)\n",
     "        )\n",
     "        self.block3 = nn.Sequential(\n",
     "            Inception(192, 64, (96, 128), (16, 32), 32),\n",
     "            Inception(256, 128, (128, 192), (32, 96), 64),\n",
-    "            nn.MaxPool2d(kernel_size=3, stride=2)\n",
+    "            nn.MaxPool2d(kernel_size=3, stride=2, padding=1)\n",
     "        )\n",
     "        self.block4 = nn.Sequential(\n",
     "            Inception(480, 192, (96, 208), (16, 48), 64),\n",
@@ -5225,10 +5231,10 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "384px"
+    "width": "230.995px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
